# -Aurelius-Multi-Agent-AI-Platform

./: .env.example  .gitignore  ARCHITECTURE.md  Procfile  README.md  decision_support_report.md  folder_structure.txt  installed.txt  pyproject.toml  render.yaml  requirements.txt
AI/: main.py  requirements.txt
AI/Agents/Automation_agent/: automation_agent.py
AI/Agents/Qna_Agent/: qna_agent.py
AI/Agents/RAG_researcher/: AI_research.py
AI/Agents/Sentiment_Agent/: sentiment_agent.py
AI/Agents/data_analysis/: data_analysis_agent.py
AI/Agents/resume_optimiser/: resume_optimiser.py
AI/Agents/talent_sourcing/: talent_sourcing.py
AI/Tasks/: tasks.py
data/: categorical_mappings.json  preprocessed_data.csv  raw_data.csv
db/: chroma.sqlite3
myapp/: models.py  serializers.py  tasks.py  urls.py  views.py
myapp/AI/: main.py  requirements.txt  sample_output.txt
myapp/AI/Agents/Automation_agent/: pyproject.toml
myapp/AI/Agents/sentiment_agent/: README.md  pyproject.toml  report.md
myapp/AI/Agents/sentiment_agent/src/Sentiment_Analysis_Crew/: crew.py  sentiment.py
myapp/AI/Agents/sentiment_agent/src/Sentiment_Analysis_Crew/config/: agents.yaml  tasks.yaml
myapp/AI/Tasks/: tasks.py
myapp/migrations/: 0001_initial.py  0002_alter_agentfeedback_agent_alter_agentfeedback_user_and_more.py  0003_agent_display_order_agent_is_featured_and_more.py  0003_alter_user_name_alter_user_phone.py
myapp/services/: ai_gateway.py  qna_service.py
myproject/: celery.py  settings.py  wsgi.py
output/: email_body.txt  report.json  report.txt
temp/: Book1.csv
(+54 files in other folders)
