[project]
name = "Sentiment_Analysis_Crew"
version = "0.1.0"
description = "Sentiment_Analysis_Crew using crewAI"
authors = [{ name = "amn_sdqi", email = "amaanshahid2510@gamil.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
Sentiment_Analysis_Crew = "Sentiment_Analysis_Crew.main:run"
run_crew = "Sentiment_Analysis_Crew.main:run"
train = "Sentiment_Analysis_Crew.main:train"
replay = "Sentiment_Analysis_Crew.main:replay"
test = "Sentiment_Analysis_Crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
